--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.pgn filter=lfs diff=lfs merge=lfs -text
+code/dt/ficsgamesdb_202301_chess_nomovetimes_311246.pgn filter=lfs diff=lfs merge=lfs -text
